--- a/diplomPythonDjango/techlog_tools_spparts_auto/techlog_tools_spparts/techlog_tools/templates/techlog_tools/base.html
+++ b/diplomPythonDjango/techlog_tools_spparts_auto/techlog_tools_spparts/techlog_tools/templates/techlog_tools/base.html
@@ -39,6 +39,8 @@
 </div>
 
 <div class="content">
+        {% block side_bar %}
+        {% endblock %}
     <div class="wrap">
         {% block content %}
         {% endblock %}
