--- a/diplomPythonDjango/techlog_tools_spparts_auto/techlog_tools_spparts/telog_spparts/templates/telog_spparts/added_spparts.html
+++ b/diplomPythonDjango/techlog_tools_spparts_auto/techlog_tools_spparts/telog_spparts/templates/telog_spparts/added_spparts.html
@@ -11,7 +11,9 @@
     {% csrf_token %}
     <h4 class="h4_add_spparts">Введите новую запчасть</h4>
     {{ form_add_spparts }}
-    <button class="btn_add_spparts">Добавить запчасть</button>
+    <div>
+        <button class="btn_add_spparts">Добавить запчасть</button>
+    </div>
 </form>
 
 {% endblock %}
